@startuml
hide circle

class Vehicule{
  immat: int
  marque: text
  categorie: {citadine|p_berline|m_berline|g_berline|4x4 SUV|break|familiale|pickup|utilitaire}
  modele: text
  couleur : text
  carburant: {SP, SP95, SP98, Diesel, Electrique, Ecocarburant}
  options: {gps, ac, sport, bluemotion, easypark}
  etat: text
  km_parcourus: float
  nv_carburant: float
  anciennete : {0, 1, 2, ... 9}
  freq_entretien : int
}

class Agence{
  nom_agence : text
  nb_employes : int
}

class Employe{
  id: int
  nom: text
  prenom: text
  age: int
  email: text
  adresse: text
}

class Agent_commercial{}

class Agent_technique{}

class Societe_reparation{
  id_societe : int
  nom_societe : text
}

class Client{
  nom: text
  prenom: text
  adresse: text
  age: int
  telephone: int
  copie_permis: text
  isPermisValide() : boolean
  isMajeur() : boolean 
}

class Particulier{}

class Professionnel{
  nom_entreprise: text
  num_id_entreprise: int
  conducteurs: liste Client
}

class Location{
  id_location : int
  moyen : {en ligne, téléphone, agence}
}

class Contrat_location{
  degats_debut_location: text
  km_parcourus_debut_location: float
  nv_carbutrant_debut_location: int
  seuil_km: int
  prix_carburant_seuil : float
  date_debut : date
  date_fin_prevue : date
  calculePrixLocation() : float
}

class Facturation{
  payee: boolean
  montant: float
  date: date
  moyen_reglement: {espece, carte crédit, carte débit}
}

class Validation_finale{
  realisee : boolean
}

class Entretien{
  date : date
}

class Controle{
  date_fin_location : date
  degats_fin_location : text
  km_parcourus_fin_location : float
  nv_carburant_fin_location : float
  is_etat_ok() : boolean 
  is_nv_essence_ok() : boolean
  is_seuil_depasse() : boolean
}

class Reparation{
  nb_jours_immobilisation : int
}

Agence "1" *-- "(2,n)" Employe

Employe <|-- Agent_technique
Employe <|-- Agent_commercial

Client <|-- Particulier
Client <|-- Professionnel

Particulier "n" -- "1" Location : ajoute, modifie, valide

Professionnel "n" -- "n" Location : ajoute, modifie, valide

Agent_commercial "1" -- "n" Contrat_location : gère 
Agent_commercial "1" -- "n" Facturation : édite
Agent_commercial "1" -- "n" Validation_finale : gère

Agent_technique "1" -- "n" Controle : gère

Contrat_location "1" -- "1" Validation_finale : donne lieu à
Contrat_location "1" -- "1" Location

Vehicule "1" -- "n" Contrat_location : est associé à  
Vehicule "1" -- "n" Entretien : est entretenu

Facturation "1" -- "n" Reparation : est associée à
Facturation "(1, n)" -- "n" Contrat_location : est associée à

Controle "1" -- "1" Contrat_location : vérifie
Controle "1" -- "(0,1)" Reparation : donne lieu à 
Controle "1" -- "(0,1)" Facturation : donne lieu à 

Societe_reparation "1" -- "n" Entretien : réalise
Societe_reparation "1" -- "n" Reparation : réalise

@enduml